basic layout design

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <label for="floorNumber">Number of floors</label>
         <input type="Number"
          id="floorNumber" 
+         value="3"
          class="lift-sim_input" 
          placeholder="Enter  floors" 
          required/>
@@ -27,6 +28,7 @@
         <label for="liftNumber">Number of lifts</label>
         <input type="Number"
         id="liftNumber"
+        value="3"
         class="lift-sim_input" 
         placeholder="Enter lifts"
         required/>
@@ -37,6 +39,7 @@
     
     </div>
     </div>
+    <div id="adding-floor" class="add-floor"></div>
 
 
     <!-- <div class="secondPage">
